--- a/etc/codecs.conf
+++ b/etc/codecs.conf
@@ -25,14 +25,6 @@ videocodec ffansi
   dll ansi
   out BGR8
 
-videocodec ffavs
-  info "FFmpeg Audio Video Standard (game format)"
-  status working
-  fourcc "AVS "
-  driver ffmpeg
-  dll avs
-  out BGR8
-
 videocodec ffbinkvideo
   info "FFmpeg Bink Video"
   status working
@@ -68,30 +60,6 @@ videocodec ffeamad
   driver ffmpeg
   dll eamad
   out YV12
-
-videocodec ffeatgq
-  info "FFmpeg EA TGQ"
-  status working
-  fourcc pQGT ; internal MPlayer FourCC
-  driver ffmpeg
-  dll eatgq
-  out YV12
-
-videocodec ffeatqi
-  info "FFmpeg EA TQI"
-  status working
-  fourcc pIQT ; internal MPlayer FourCC
-  driver ffmpeg
-  dll eatqi
-  out YV12
-
-videocodec ffhnm4
-  info "FFmpeg Cryo Interactive Entertainment HMN4"
-  status working
-  fourcc HNM4 ; internal MPlayer FourCC
-  driver ffmpeg
-  dll hnm4video
-  out BGR8
 
 videocodec ffmvi1
   info "FFmpeg Motion Pixels"
@@ -157,14 +125,6 @@ videocodec ffkmvc
   out BGR8
   driver ffmpeg
   dll "kmvc"
-
-videocodec ffrscc
-  info "FFmpeg innoHeim/Rsupport Screen Capture Codec"
-  status working
-  fourcc RSCC,ISCC
-  driver ffmpeg
-  dll rscc
-  out BGRA
 
 videocodec ffzmbv
   info "FFmpeg Zip Motion-Block Video"
@@ -604,6 +564,39 @@ videocodec ffmpeg12vdpau
   out VDPAU_MPEG1
   out VDPAU_MPEG2
 
+videocodec ffmpeg12vdpauold
+  info "FFmpeg MPEG-1/2 (VDPAU)"
+  status working
+  format 0x10000001  ; MPEG-1
+  format 0x10000002  ; MPEG-2
+  fourcc mpg1,mpg2,MPG2
+  fourcc PIM1        ; Pinnacle hardware-MPEG-1
+  fourcc PIM2        ; Pinnacle hardware-MPEG-2
+  fourcc "DVR "
+  fourcc hdv2
+  fourcc MPEG
+  fourcc hdv1
+  fourcc hdv3        ; HDV 1080i50
+  fourcc hdv5        ; HDV  720p25
+  fourcc mx5p        ; MPEG IMX 625/50 (50 Mb/s)
+  fourcc hdv6,hdv7,hdv8
+  fourcc xdv1,xdv2,xdv3
+  fourcc xdv4,xdv5,xdv6
+  fourcc xdv7,xdv8,xdv9
+  fourcc xdva,xdvb,xdvc
+  fourcc xdvd,xdve,xdvf
+  fourcc mx5n,mx4n,mx4p
+  fourcc mx3n,mx3p
+  fourcc AVmp
+  fourcc mp2v,mpgv
+  fourcc LMP2 ; Lead mpeg2 in avi
+  fourcc m2v1,m1v1
+  fourcc "m1v "
+  driver ffmpeg
+  dll "mpegvideo_vdpau"
+  out VDPAU_MPEG1
+  out VDPAU_MPEG2
+
 videocodec ffmpeg2crystalhd
   info "FFmpeg MPEG-2 (CrystalHD)"
   status working
@@ -748,15 +741,6 @@ videocodec mpng
   driver mpng
   out BGR32,BGR24,BGR8,Y800
 
-videocodec ffapng
-  info "FFmpeg APNG"
-  status working
-  fourcc apng,APNG
-  driver ffmpeg
-  dll apng
-  out BGR32,BGR8,Y800,RGB64BE,RGB48BE,RGBA,RGB24,BGR8
-  out Y8A,Y16BE
-
 videocodec ffptx
   info "FFmpeg V.Flash PTX"
   status working
@@ -878,7 +862,7 @@ videocodec ffqtrle
   format 0x20656C72 ; "rle "
   driver ffmpeg
   dll "qtrle"
-  out BGR32,RGB24,BGR15,BGR8,RGB1
+  out BGR32,RGB24,BGR15,BGR8
 
 videocodec ffrpza
  info "QuickTime Apple Video"
@@ -1326,6 +1310,14 @@ videocodec ffwmv3vdpau
   dll wmv3
   out VDPAU_WMV3
 
+videocodec ffwmv3vdpauold
+  info "FFmpeg WMV3/WMV9 (VDPAU)"
+  status buggy
+  fourcc WMV3,wmv3
+  driver ffmpeg
+  dll wmv3_vdpau
+  out VDPAU_WMV3
+
 videocodec ffwmv3crystalhd
   info "FFmpeg WMV3/WMV9 (CrystalHD)"
   status buggy
@@ -1350,6 +1342,15 @@ videocodec ffvc1vdpau
   fourcc vc-1,VC-1
   driver ffmpeg
   dll vc1
+  out VDPAU_VC1
+
+videocodec ffvc1vdpauold
+  info "FFmpeg WVC1 (VDPAU)"
+  status buggy
+  fourcc WVC1,wvc1,WMVA
+  fourcc vc-1,VC-1
+  driver ffmpeg
+  dll vc1_vdpau
   out VDPAU_VC1
 
 videocodec ffvc1crystalhd
@@ -1450,6 +1451,26 @@ videocodec ffh264vdpau
   format 0x10000005
   driver ffmpeg
   dll h264
+  out VDPAU_H264
+
+videocodec ffh264vdpauold
+  info "FFmpeg H.264 (VDPAU)"
+  status working
+  fourcc H264,h264
+  fourcc X264,x264
+  fourcc avc1,AVC1
+  fourcc davc,DAVC
+  fourcc ai1p,ai1q,ai12,ai13
+  fourcc ai15,ai16
+  fourcc ai5p,ai5q,ai52,ai53
+  fourcc ai55,ai56
+  fourcc x3eV
+  fourcc Q264,V264
+  fourcc GAVC,UMSV
+  fourcc rv64 ; Radvision
+  format 0x10000005
+  driver ffmpeg
+  dll h264_vdpau
   out VDPAU_H264
 
 videocodec ffh264crystalhd
@@ -1593,6 +1614,42 @@ videocodec ffodivxvdpau
   fourcc DYM4
   driver ffmpeg
   dll mpeg4
+  out VDPAU_MPEG4
+
+videocodec ffodivxvdpauold
+  info "FFmpeg MPEG-4,DIVX-4/5 (VDPAU)"
+  status working
+  fourcc FMP4,fmp4
+  fourcc DIVX,divx
+  fourcc DIV1,div1 divx
+  fourcc MP4S,mp4s ; ISO MPEG-4 Video V1
+  fourcc M4S2,m4s2
+  fourcc xvid,XVID,XviD,XVIX
+  fourcc DX50,dx50,BLZ0 DX50
+  fourcc mp4v,MP4V
+  format 0x4
+  fourcc UMP4
+  fourcc RMP4
+  fourcc 3IV2,3iv2  ; 3ivx Delta 4
+  fourcc DXGM
+  fourcc SEDG ; diskless camcorder Samsung Miniket VP-M110
+  fourcc SMP4,smp4 ; Samsung SMP4 video codec
+  fourcc VIDM ; vidm 4.01 codec
+  format 0x10000004  ; mpeg 4 es
+  fourcc m4cc,M4CC
+  fourcc hdx4,HDX4
+  fourcc FVFW,fvfw
+  fourcc FFDS
+  fourcc DCOD,MVXM,EM4A,PM4V
+  fourcc M4T3,DMK2,DIGI,INMC
+  fourcc EPHV,SN40,WAWV
+  fourcc uldx,ULDX,VSPX
+  fourcc SIPP ; Samsung SHR-6040
+  fourcc DreX,DM4V,LMP4,DP02
+  fourcc QMP4
+  fourcc DYM4
+  driver ffmpeg
+  dll mpeg4_vdpau
   out VDPAU_MPEG4
 
 videocodec ffodivxcrystalhd
@@ -1891,7 +1948,6 @@ videocodec eescreen
 videocodec ffg2m
   info "FFmpeg Go2Meeting"
   status working
-  fourcc G2M2,G2M3
   fourcc G2M4,G2M5
   driver ffmpeg
   dll g2m
@@ -2268,7 +2324,7 @@ videocodec ffh263
   fourcc VX1K     ; Agora Labs VX1000S H263
   fourcc lsvm     ; lsv h263
   driver ffmpeg
-  dll h263p
+  dll h263
   out YV12,I420,IYUV
 
 videocodec ffzygo
@@ -2745,30 +2801,6 @@ videocodec fftdsc
   dll tdsc
   out BGR24
 
-videocodec ffscreenpresso
-  info "FFmpeg Screenpresso"
-  status working
-  fourcc SPV1
-  driver ffmpeg
-  dll screenpresso
-  out BGR24
-
-videocodec ffhap
-  info "FFmpeg Hap"
-  status working
-  fourcc Hap1,Hap5,HapY
-  driver ffmpeg
-  dll hap
-  out RGBA
-
-videocodec ffdxv
-  info "FFmpeg DXV"
-  status working
-  fourcc DXDI,DXD3
-  driver ffmpeg
-  dll dxv
-  out RGBA
-
 videocodec ffzerocodec
   info "FFmpeg ZeroCodec lossless"
   status working
@@ -2850,14 +2882,6 @@ videocodec canopushq
   driver vfw
   dll "CUVCcodc.dll"
   out BGR24
-
-videocodec ffcanopushq
-  status working
-  info "FFmpeg Canopus HQ Codec"
-  fourcc CUVC
-  driver ffmpeg
-  dll hq_hqa
-  out 422P,422A
 
 videocodec canopusll
   status working
@@ -3129,15 +3153,6 @@ videocodec cjpg
   out YUY2
   out UYVY
   out BGR24,BGR15
-
-videocodec ffcpia
-  info "CPiA webcam"
-  comment "decodes data from v4l2 source, untested"
-  status working
-  fourcc CPiA ; internal MPlayer FourCC
-  driver ffmpeg
-  dll cpia
-  out YV12
 
 videocodec kensington
   info "kensington webcam"
@@ -3711,7 +3726,6 @@ videocodec ffv210
   info "FFmpeg V210 - 10-bit"
   status untested
   fourcc v210
-  fourcc C210 ; Canopus C210
   driver ffmpeg
   dll v210
   out 422P10
@@ -4283,7 +4297,6 @@ videocodec rawyuy2
   fourcc VYUY YUY2
   fourcc yuvs YUY2
   fourcc DVOO YUY2
-  fourcc YUYV YUY2
   out YUY2
 
 videocodec rawyuv2
@@ -4430,7 +4443,6 @@ videocodec ffrawyuy2
   fourcc VYUY,vyuy
   fourcc yuvs,YUVS
   fourcc DVOO
-  fourcc YUYV
   driver ffmpeg
   dll rawvideo
   out YUY2
@@ -4924,13 +4936,13 @@ audiocodec ffadpcmimawav
   driver ffmpeg
   dll adpcm_ima_wav
 
-audiocodec ffzorkpcm
-  info "FFmpeg PCM Zork audio"
+audiocodec imaadpcm
+  info "IMA ADPCM"
   status working
-;  format 0x11 ; original format in avi file, conflicts with ima adpcm
-  format 0x116b727a ; 'zrk'0x11, Mplayer internal
-  driver ffmpeg
-  dll pcm_zork
+  format 0x11
+  fourcc ima4 ; (MOV files)
+  format 0x1100736d ; "ms\x00\x11" (MOV files)
+  driver imaadpcm
 
 audiocodec ffadpcmms
   info "FFmpeg MS ADPCM audio"
@@ -4939,6 +4951,13 @@ audiocodec ffadpcmms
   format 0x0200736d  ; "ms\x00\x02" (MOV files)
   driver ffmpeg
   dll adpcm_ms
+
+audiocodec msadpcm
+  info "MS ADPCM"
+  status working
+  format 0x2
+  format 0x0200736d  ; "ms\x00\x02" (MOV files)
+  driver msadpcm
 
 audiocodec ffadpcmoki
   info "FFmpeg ADPCM IMA Dialogic OKI"
@@ -4954,13 +4973,6 @@ audiocodec ffadpcmafc
   fourcc "AFC " ; internal MPlayer FourCC
   driver ffmpeg
   dll adpcm_afc
-
-audiocodec ffadpcmaica
-  info "FFmpeg ADPCM Yamaha AICA"
-  status working
-  fourcc "AICA" ; internal MPlayer FourCC
-  driver ffmpeg
-  dll adpcm_aica
 
 audiocodec ffadpcmdtk
   info "FFmpeg ADPCM Nintendo Gamecube DTK"
@@ -4983,6 +4995,13 @@ audiocodec ffadpcmimadk4
               ; registered with Microsoft
   driver ffmpeg
   dll adpcm_ima_dk4
+
+audiocodec dk4adpcm
+  info "Duck DK4 ADPCM (rogue format number)"
+  status working
+  format 0x61 ; This format number was used by Duck Corp. but not officially
+              ; registered with Microsoft
+  driver imaadpcm
 
 audiocodec ffadpcmimadk3
   info "FFmpeg DK3 IMA ADPCM audio"
@@ -5012,6 +5031,13 @@ audiocodec ffadpcmimaeaeacs
   fourcc EACS ; internal MPlayer FourCC
   driver ffmpeg
   dll adpcm_ima_ea_eacs
+
+audiocodec dk3adpcm
+  info "Duck DK3 ADPCM (rogue format number)"
+  status working
+  format 0x62 ; This format number was used by Duck Corp. but not officially
+              ; registered with Microsoft
+  driver dk3adpcm
 
 audiocodec ffroqaudio
   info "Id RoQ File Audio"
@@ -5074,7 +5100,7 @@ audiocodec ffvima
   status working
   fourcc VIMA ; internal MPlayer FourCC
   driver ffmpeg
-  dll adpcm_vima
+  dll vima
 
 audiocodec ffpafaudio
   info "FFmpeg Packed Animation File"
@@ -5089,13 +5115,6 @@ audiocodec ffwssnd1
   fourcc SND1 ; internal MPlayer FourCC
   driver ffmpeg
   dll ws_snd1
-
-audiocodec ffinterplayacm
-  info "FFmpeg Interplay ACM audio"
-  status working
-  format 0x97280301 ; internal MPlayer FourCC
-  driver ffmpeg
-  dll interplay_acm
 
 audiocodec ffinterplaydpcm
   info "FFmpeg Interplay DPCM audio"
@@ -5132,26 +5151,12 @@ audiocodec ffadpcmear3
   driver ffmpeg
   dll adpcm_ea_r3
 
-audiocodec ffadpcmeaxas
-  info "FFmpeg ADPCM Electronic Arts XAS"
-  status working
-  fourcc EXAS ; internal MPlayer FourCC
-  driver ffmpeg
-  dll adpcm_ea_xas
-
 audiocodec ffadpcmeamaxis
   info "FFmpeg EA MAXIS XA ADPCM audio"
   status working
   fourcc ADXA ; internal MPlayer FourCC
   driver ffmpeg
   dll adpcm_ea_maxis_xa
-
-audiocodec ffadpcmpsx
-  info "FFmpeg FFmpeg ADPCM Playstation"
-  status working
-  fourcc APSX ; internal MPlayer FourCC
-  driver ffmpeg
-  dll adpcm_psx
 
 audiocodec ffadpcmxa
   info "FFmpeg XA ADPCM audio"
@@ -5183,13 +5188,6 @@ audiocodec ffadpcmthp
   fourcc GADP ; rsd files
   driver ffmpeg
   dll adpcm_thp
-
-audiocodec ffadpcmthple
-  info "FFmpeg THP ADPCM little endian audio"
-  status working
-  fourcc THPL
-  driver ffmpeg
-  dll adpcm_thp_le
 
 audiocodec libdv
   info "raw DV audio (libdv)"
@@ -5430,20 +5428,6 @@ audiocodec ffwmavoice
   format 0xA
   driver ffmpeg
   dll "wmavoice"
-
-audiocodec ffxma1
-  info "Xbox Media Audio 1 (FFmpeg)"
-  status working
-  format 0x165
-  driver ffmpeg
-  dll xma1
-
-audiocodec ffxma2
-  info "Xbox Media Audio 2 (FFmpeg)"
-  status working
-  format 0x166
-  driver ffmpeg
-  dll xma2
 
 audiocodec ffmac3
   info "Macintosh Audio Compression and Expansion 3:1"
@@ -5772,37 +5756,6 @@ audiocodec musepack
   format 0x2b4d
   driver mpcdec
 
-audiocodec ffdsdlsbf
-  info "FFmpeg DSD (Direct Stream Digital), lsbit first"
-  comment "Does it exist?"
-  status  working
-  fourcc DSDl ; MPlayer internal
-  driver ffmpeg
-  dll dsd_lsbf
-
-audiocodec ffdsdlsbfp
-  info "FFmpeg DSD (Direct Stream Digital), lsbit first, planar"
-  comment "in DSF files"
-  status  working
-  fourcc DSFl ; MPlayer internal
-  driver ffmpeg
-  dll dsd_lsbf_planar
-
-audiocodec ffdsdmsbf
-  info "FFmpeg DSD (Direct Stream Digital), msbit first"
-  status  working
-  fourcc "DSD "
-  driver ffmpeg
-  dll dsd_msbf
-
-audiocodec ffdsdmsbfp
-  info "FFmpeg DSD (Direct Stream Digital), msbit first, planar"
-  comment "in DSF files"
-  status  working
-  fourcc DSFm ; MPlayer internal
-  driver ffmpeg
-  dll dsd_lsbf_planar
-
 audiocodec ffamrnb
   info "AMR Narrowband"
   status working
@@ -5927,27 +5880,6 @@ audiocodec iac25
   driver acm
   dll "iac25_32.ax"
 
-audiocodec ffadpcmsbpro2
-  info "FFmpeg ADPCM Sound Blaster Pro 2-bit"
-  status working
-  format 0x3253 ; 'S2', pseudo id, MPlayer internal
-  driver ffmpeg
-  dll adpcm_sbpro_2
-
-audiocodec ffadpcmsbpro3
-  info "FFmpeg ADPCM Sound Blaster Pro 2.6-bit"
-  status working
-  format 0x3353 ; 'S3', pseudo id, MPlayer internal
-  driver ffmpeg
-  dll adpcm_sbpro_3
-
-audiocodec ffadpcmsbpro4
-  info "FFmpeg ADPCM Sound Blaster Pro 4-bit"
-  status working
-  format 0x3453 ; 'S4', pseudo id, MPlayer internal
-  driver ffmpeg
-  dll adpcm_sbpro_4
-
 audiocodec ffctadp32
   info "FFmpeg Creative ADPCM codec"
   status working
@@ -5969,13 +5901,6 @@ audiocodec ctfs32
   format 0x203 ; FastSpeech 10
   driver acm
   dll "ctfs32.acm"
-
-audiocodec ffdsssp
-  info "FFmpeg Digital Speech Standars - Standard Play  mode (DSS_SP)"
-  status working
-  fourcc DSSs ; MPlayer internal
-  driver ffmpeg
-  dll dss_sp
 
 audiocodec sc4
   info "SC4 : Micronas speech codec (ADPCM, MPman recording)"
